fix(theme/input): fix mixin 'is' atRoot issue, fix renderer of input z-index and color issue

--- a/packages/theme/src/scss/components/input/basic.scss
+++ b/packages/theme/src/scss/components/input/basic.scss
@@ -109,6 +109,9 @@
     }
   }
   @include is(with-renderer, false, true) {
+    @include e(renderer) {
+      z-index: 2;
+    }
     @include e(inner-input) {
       opacity: 0;
       transition: opacity 0.3s ease;
@@ -223,7 +226,6 @@
   @include e(renderer) {
     position: absolute;
     inset: 0;
-    z-index: 2;
     background-clip: content-box;
     display: flex;
     align-items: center;
